BG-3569: fix ReaderWriters